fixed bin overlapping items

--- a/src/components/Bin/Bin.module.scss
+++ b/src/components/Bin/Bin.module.scss
@@ -102,7 +102,6 @@
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 5;
 
     &.active {
       top: -1px;
